--- a/monCV.html
+++ b/monCV.html
@@ -18,12 +18,12 @@
     <title>MonCV</title>
 </head>
 
-<body>
+<body class="">
 
     <header>
         <DIV class="container">
             <div class="row">
-                <div id="imgh" class="imgh col-md-3 bg-primary">
+                <div id="imgh" class="imgh col-md-3 ">
 
                     <!-- <img class="" src="images/photo.jpg" width="100px" height="270px" alt=""> -->
 
@@ -41,7 +41,7 @@
     </header>
 
 
-    <main>
+    <main class="shadow">
         <div class="container p-5  bg-light">
             <div class="row">
                 <!-- debut coté droit -->
@@ -192,7 +192,7 @@
                 <div class="col-md-4 ">
 
                     <div id="detailp" class="detailp  p-2 px-5">
-                        <h2 class="titre">Détails personels</h2>
+                        <!-- <h2 class="titre">Détails personels</h2>
 
                         <div class="element">
                             <h5 class="text-muted">Nom</h5>
@@ -229,7 +229,7 @@
                         <div class="element">
                             <h5 class="text-muted">Etat civil</h5>
                             <h5 id="etatc">Célibataire</h5>
-                        </div>
+                        </div> -->
 
 
 
