--- a/monCV.html
+++ b/monCV.html
@@ -105,10 +105,10 @@
 
                     <!-- Compétences -->
                     <div id="comptetence" class="comptetence">
-                        <h2 class="titre">Comptetences</h2>
+                        <!-- <h2 class="titre">Comptetences</h2> -->
                         <div class="container">
-                            <div class="row " id="comp">
-                                <div class="col-6">
+                            <div class="row comp" id="comp">
+                                <!-- <div class="col col-6">
                                     <div class="element">
                                         <h5 class="">HTML,CSS,JS</h5>
                                         <div class="progress w-75">
@@ -179,7 +179,7 @@
                                                 aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                                         </div>
                                     </div>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
@@ -239,7 +239,7 @@
 
                     <div id=langue class="langue p-2 px-5">
 
-                        <h2 class="titre">Langues</h2>
+                        <!-- <h2 class="titre">Langues</h2>
                         <div class="element">
                             <h5 class="">Arabe</h5>
                             <div class="progress">
@@ -260,7 +260,7 @@
                                 <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75"
                                     aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
 
