--- a/monCV.html
+++ b/monCV.html
@@ -94,13 +94,13 @@
 
               <!-- projets -->
               <div id="projets" class="projets ">
-                <h2 class="titre">Projet</h2>
-                <div class="element">
+                <!-- <h2 class="titre">Projet</h2> -->
+                <!-- <div class="element">
                     <h5 id="projet" class="d-inline-block">PFE Licence</h5>
                     <span id="anneP" class="h5 mx-5 d-inline-block float-end">2021</span>
                     <h5 id="descp" class="text-muted">Application web pour une agence de voyage</h5>
-                </div>
-                <hr class="m-4 text-dark shadow">
+                </div> -->
+                <!-- <hr class="m-4 text-dark shadow"> -->
             </div>
 
                     <!-- Compétences -->
