--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
                     </div>
                     <div class="col-sm-12 col-md-4 mt-2  mb-2">
                         <div class="form-floating ">
-                            <!-- <input type="text" class="form-control" id="ville" placeholder="Boufarik"> -->
-                            <select class="form-control" id="wilayas"></select>
-                            <label for="wilayas">Ville</label>
+                            <input type="text" class="form-control" id="ville" placeholder="Boufarik">
+                            <!-- <select class="form-control" id="ville"></select> -->
+                            <label for="ville">Ville</label>
                         </div>
                     </div>
                     <div class="col-sm-12 col-md-4 mt-2  mb-2">
