--- a/monCV.html
+++ b/monCV.html
@@ -48,17 +48,17 @@
                 <div class="col-md-8 border-end border-secondary mb-5">
                     <!-- profil -->
                     <div id="profil" class="profile  ">
-                        <h2 class="titre">Profil</h2>
+                        <!-- <h2 class="titre">Profil</h2>
                         <div class="element">
                             <h5 id="desc" class="">je suis étudiant en Master 1 informatique (Ingénierie de Logiciel) , passionné de developpement </h5>
 
                         </div>
-                        <hr class="m-4 text-dark shadow">
+                        <hr class="m-4 text-dark shadow"> -->
                     </div>
 
                     <!-- diplome -->
                     <div id="diplome" class="diplomee  ">
-                        <h2 class="titre">Diplomes</h2>
+                        <!-- <h2 class="titre">Diplomes</h2>
                         <div class="element">
                             <h5 id="dip" class="d-inline-block">BAC ( Sciences Experimentales )</h5>
                             <span class="h5 mx-5 d-inline-block float-end">2015</span>
@@ -71,12 +71,12 @@
                             <h5 class="text-muted">Spécialité : Système informatique</h5>
 
                         </div>
-                        <hr class="m-4 text-dark shadow">
+                        <hr class="m-4 text-dark shadow"> -->
                     </div>
 
                     <!-- Formation -->
                     <div id="formation" class="formation">
-                        <h2 class="titre">Formation</h2>
+                        <!-- <h2 class="titre">Formation</h2>
                         <div class="element">
                             <h5 id="dip" class="d-inline-block">Java</h5>
                             <span class="h5 mx-5 d-inline-block float-end">oct 2018 - mai 2019</span>
@@ -89,7 +89,7 @@
                             <h5 class="text-muted">GoMyCode, Bab ezzouar, Alger</h5>
 
                         </div>
-                        <hr class="m-4 text-dark shadow">
+                        <hr class="m-4 text-dark shadow"> -->
                     </div>
 
               <!-- projets -->
